--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3959,6 +3959,7 @@ the sim-input file (or via command-line override):
    HOSTLIB_SPECBASIS_FILE: xxxx       # default=none
    HOSTLIB_SPECDATA_FILE:  xxxx       # default=none
    HOSTLIB_MAXREAD:      10000        # default=billion
+   HOSTLIB_MNINTFLUX_SNPOS: .999      # default=0
    HOSTLIB_MXINTFLUX_SNPOS: .999      # default=.99
    HOSTLIB_MAXDDLR:      xxx          # default=4 (for host matches)
    HOSTLIB_SBRADIUS:     xxx          # default=1.2 arcsec
@@ -3992,10 +3993,11 @@ true redshift and efficiency of finding a host photo-z.
 For very large \hostlib\ files,
 the {\tt MAXREAD} key may be useful to reduce the 
 initialization time or limit memory usage.
-The next option ({\tt MXINTFLUX\_SNPOS}) sets the
-fraction of total galaxy flux used to generate the
+The next options ({\tt MNINTFLUX\_SNOPOS,MXINTFLUX\_SNPOS}) sets the
+fraction range of total galaxy flux used to generate the
 SN position; this option truncates extreme galaxy-SN
-separations.  {\tt HOSTLIB\_STOREPAR} is a comma-separated
+separations, and can be used to keep events away from the core.
+{\tt HOSTLIB\_STOREPAR} is a comma-separated
 list of parameters (case-insensitive, but no blank spaces
 before or after each comma) to store in the data files;
 these ``{\tt STOREPAR}'' paramaters are automatically propagated 
