fix subtle bug of bad muCOV cells

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3880,7 +3880,7 @@ a key after the {\tt VARNAMES} list as shown in Fig.~\ref{fig:hostlib}.
 Commonly used Sersic indices are $n=0.5, 1, 4$ 
 for Gaussian, exponential and  deVaucouleurs,
 respectively. 
-If there are more than two Sersic profiles per galaxy, 
+If there are 2 or more Sersic profiles per galaxy, 
 weights ({\tt w0\_Sersic}-{w9\_Sersic}) are needed.
 
 %Finally, the weight ``{\tt w0\_Sersic}'' give the flux-ratio
